// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcTableHead should not render if no columns are supplied 1`] = `<!---->`;

exports[`EcTableHead should render as expected 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      
        Column A
      
    </th>
    <th
      class="ec-table-head__cell"
      colspan="2"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      
        Column B
      
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      
        Column C
      
    </th>
  </tr>
</thead>
`;

exports[`EcTableHead should render sorting as expected 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Column A
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </div>
    </th>
    <th
      class="ec-table-head__cell"
      colspan="2"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Column B
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Sorted descending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            desc
          </span>
        </a>
      </div>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Column C
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </div>
    </th>
  </tr>
</thead>
`;
